# crosspaste-server

./: .dockerignore  .env.demo  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
assets/admin/: app.css  app.js  index.html
config/: relay.example.env
src/: admin.rs  auth.rs  config.rs  database.rs  discovery.rs  error.rs  hub.rs  main.rs  protocol.rs  proxy.rs  qr.rs  registry.rs  routes.rs  secure.rs  sync_info.rs  tunnel.rs
tests/: relay_smoke.rs
