[package]
name = "crosspaste-relay"
version = "0.1.0"
edition = "2021"
description = "Pure relay server for CrossPaste cross-network clipboard sync (transparent HTTP tunnel, no content decryption)"
license = "AGPL-3.0"
authors = ["CrossPaste contributors"]
readme = "README.md"
default-run = "crosspaste-relay"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "macros"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
futures-util = "0.3"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
# agent example
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.26"

[[bin]]
name = "crosspaste-relay"
path = "src/main.rs"

[[bin]]
name = "relay_agent_example"
path = "src/bin/relay_agent_example.rs"
