[package]
name = "crosspaste-server"
version = "0.1.0"
edition = "2021"
description = "Central CrossPaste-compatible hub server for pairing and clipboard sync"
license = "AGPL-3.0"
authors = ["CrossPaste contributors"]
readme = "README.md"
default-run = "crosspaste-server"

[dependencies]
anyhow = "1"
argon2 = "0.5"
aes = "0.8"
axum = { version = "0.8", features = ["ws", "macros"] }
base64 = "0.22"
bytes = "1"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
data-encoding = "2"
dotenvy = "0.15"
futures-util = "0.3"
http = "1"
hmac = "0.12"
if-addrs = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
mdns-sd = "0.20"
p256 = { version = "0.13", features = ["ecdsa", "ecdh", "pkcs8"] }
qrcode = "0.14"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha1 = "0.10"

[dev-dependencies]
base64 = "0.22"
futures-util = "0.3"
p256 = { version = "0.13", features = ["ecdsa", "ecdh", "pkcs8"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.26"

[[bin]]
name = "crosspaste-server"
path = "src/main.rs"

[[bin]]
name = "server_agent_example"
path = "src/bin/server_agent_example.rs"
